src/test/ui/type-alias-impl-trait/type-alias-impl-trait-const.stderr
error[E0308]: mismatched types
  --> $DIR/type-alias-impl-trait-const.rs:10:19
   |
LL | pub type Foo = impl Debug;
   |                ---------- the expected opaque type
...
LL | const _FOO: Foo = 5;
   |                   ^ expected opaque type, found integer
   |
   = note: expected opaque type `impl Debug`
                     found type `{integer}`

error: could not find defining uses
  --> $DIR/type-alias-impl-trait-const.rs:7:16
   |
LL | pub type Foo = impl Debug;
   |                ^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
